# oduit.nix

./: .gitignore  AGENTS.md  LICENSE  README.md  devshell.nix  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  readme-check.yml
checks/: meta-maintainers.nix
lib/: default.nix
lib/fetch-cargo-vendor/: fetch-cargo-vendor-util.py
overlays/: default.nix
patches/: README.md
scripts/: check.sh  generate-package-docs.nix  generate-package-docs.py
scripts/updater/: __init__.py  bun.py  deps.py  hashes_file.py  http.py  nix.py  npm.py  platforms.py  version.py
